force-app/main/default/objects/Case/fields/F_SLAInDays__c.field-meta.xml
<CustomField>
    <fullName>F_SLAInDays__c</fullName>
    <label>SLA (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>