force-app/main/default/objects/Case/fields/F_SLAInHours__c.field-meta.xml
<CustomField>
    <fullName>F_SLAInHours__c</fullName>
    <label>SLA (In Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>